add Lombok; remove rethrowing lambdas; remove deprecated methods; remove Kotlin class